# ml-logger

./: .pre-commit-config.yaml  LICENSE  NEWS.md  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: .buildinfo  filesystem_logger.html  genindex.html  index.html  logbook.html  metrics.html  ml_logger.html  ml_logger.logger.html  ml_logger.parser.experiment.html  ml_logger.parser.html  modules.html  objects.inv  parser.html  py-modindex.html  search.html  searchindex.js  types.html  utils.html  wandb.html
docs/_sources/: index.rst.txt  ml_logger.logger.rst.txt  ml_logger.parser.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: environment.pickle  index.doctree  ml_logger.doctree  ml_logger.logger.doctree  ml_logger.parser.doctree  modules.doctree
docs/html/: ml_logger.parser.html  modules.html  searchindex.js
docs/logger/: base.html  filesystem.html  index.html  tensorboard.html  wandb.html
docs/ml_logger/: index.html  metrics.html  types.html
docs/pages/: readme.html
docs/parser/: config.html  index.html  metric.html  parser.html  utils.html
docs/source/: conf.py
docsrc/: conf.py  index.rst  ml_logger.logger.rst  ml_logger.parser.rst  ml_logger.rst
documentation/source/: modules.rst
ml_logger/: __init__.py  filesystem_logger.py  logbook.py  metrics.py  parser.py  types.py  utils.py  wandb.py
ml_logger/logger/: base.py  filesystem.py  mlflow.py  (+3 more)
requirements/: all.txt  dev.txt  filesystem.txt
tests/: test_logger.py  test_metrics.py  test_parser.py  utils.py
(+97 files in other folders)
