[mypy]
python_version = 3.6
warn_unused_configs = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-tinydb]
ignore_missing_imports = True

[mypy-wandb]
ignore_missing_imports = True

[mypy-tensorboardX]
ignore_missing_imports = True

[mypy-mlflow]
ignore_missing_imports = True

[flake8]
exclude = .git,.nox
max-line-length = 119
select = ANN,B,C,D,E,F,S,W
ignore=ANN101,ANN204,B009,D101,D104,D105,D107,E501,W503
max-complexity = 10

[metadata]
description-file = README.md
