[mypy]
python_version = 3.6
warn_unused_configs = True

[mypy-mlflow]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-tensorboardX]
ignore_missing_imports = True

[mypy-tinydb]
ignore_missing_imports = True

[mypy-wandb]
ignore_missing_imports = True

[mypy-pymongo]
ignore_missing_imports = True


[flake8]
exclude = .git,.nox
max-line-length = 119
select = ANN,B,C,D,E,F,S,W
ignore=ANN101,ANN204,B009,D101,D104,D105,D107,E501,W503
max-complexity = 10

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[metadata]
description-file = README.md
